--- a/src/components/Character/Character.module.scss
+++ b/src/components/Character/Character.module.scss
@@ -3,22 +3,42 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid #ddd;
+  font-family: 'Roboto', sans-serif;
   border-radius: 8px;
   padding: 16px;
   cursor: pointer;
-  transition: box-shadow 0.3s ease;
-  background-color: #fff;
+  width: calc(100% / 4 - 49px);
+  background-color: rgba(#fff, 0.6);
+  transition: all 0.2s ease-in-out;
 
-  :hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  &:hover {
+    background-color: rgba(#fff, 1);
+  }
+
+  @media (max-width: 1100px) {
+    width: calc(100% / 3 - 48px);
+  }
+
+  @media (max-width: 768px) {
+    width: calc(100% / 2 - 44px);
+  }
+
+  @media (max-width: 576px) {
+    width: 100%;
   }
 }
 
 .image {
   width: 150px;
   height: 150px;
-  object-fit: cover;
   border-radius: 50%;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .info {
